# sivenkov_coursework_tp

./: Doxyfile
dep/: exampleCSV.csv  exampleDB  test-cw.csv
src/: CMakeLists.txt  CustomComponent.cpp  CustomComponent.h  main.cpp
src/dep/: exampleDB
src/doxygen_docs/rtf/: _custom_component_8h__incl.dot  refman.rtf  ~$refman.rtf
